--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>example</groupId>
     <artifactId>news-searcher</artifactId>
     <version>1.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <name>News Searcher API</name>
     <description>HTTP API server for news searcher service</description>
 
